Make sure there's no overlap between background and navigation text

--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -14,7 +14,7 @@ $line-height: 3px;
 }
 .nav {
     flex-direction: row;
-    background: linear-gradient(to top, #fff 0%, #fff 25%, rgba(#fff, 0) 100%);
+    background: linear-gradient(to top, #fff 0%, #fff 35%, rgba(#fff, 0) 100%);
     z-index: 5;
     width: 100%;
     justify-content: center;
